# fontdiff

./: LICENSE.txt  README.md  config  pyproject.toml
fontdiff/: __init__.py  alphabets.py  config.py  defaults.py  dot_dict.py  fontdiff.py  raster_compare.py  svg_compare.py
