[project]
name = "fontdiff"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.1.0",
    "skia-pathops>=0.8.0",
    "ziafont>=0.11"
]
dynamic = ["version", "description"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
  { name="derVedro", email="dervedro@googlemail.com" },
]

[project.urls]
Homepage = "https://github.com/derVedro/fontdiff"
Issues = "https://github.com/derVedro/fontdiff/issues"

[project.scripts]
fontdiff = "fontdiff.fontdiff:main"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "fontdiff"
